--- a/advanced-css-course-master/Nexter/starter/css/style.css
+++ b/advanced-css-course-master/Nexter/starter/css/style.css
@@ -141,9 +141,59 @@ body {
   font-style: italic;
   margin-bottom: 4rem; }
 
+.homes {
+  grid-column: center-start / center-end;
+  margin: 15rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 7rem; }
+
 .home {
-  background-color: #101d2c;
-  grid-column: center-start / center-end; }
+  background-color: #f9f7f6;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 3.5rem; }
+  .home__img {
+    width: 100%;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    z-index: 1; }
+  .home__link {
+    grid-row: 1 / 2;
+    grid-column: 2 /3;
+    height: 2.5rem;
+    width: 2.5rem;
+    z-index: 2;
+    justify-self: end;
+    margin: 1rem; }
+  .home__name {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    justify-self: center;
+    align-self: end;
+    z-index: 2;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.6rem;
+    text-align: center;
+    padding: 1.6rem;
+    background-color: #101d2c;
+    color: #fff;
+    font-weight: 400;
+    width: 80%;
+    transform: translateY(50%); }
+  .home__location, .home__rooms {
+    margin-top: 2.5rem; }
+  .home__location, .home__rooms, .home__area, .home__price {
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center; }
+  .home__btn {
+    grid-column: 1 / -1; }
+  .home svg {
+    fill: #c69963;
+    height: 2rem;
+    width: 2rem;
+    margin-right: 1rem; }
 
 .gallery {
   background-color: #54483a;
