--- a/homepage/website02/styles/style.css
+++ b/homepage/website02/styles/style.css
@@ -10,7 +10,7 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Overpass", sans-serif;
-  background-color: #ffffff;
+  background-color: #eee;
 }
 
 .content {
@@ -27,102 +27,59 @@ body {
 .content__description {
   font-size: 1.1rem;
   line-height: 2;
+  max-width: 600px;
 }
 
-.hero {
-  background: #ff8f70;
-  background: url(../images/bg-pattern-intro.svg) no-repeat 30% 51%, -webkit-gradient(linear, left top, right top, color-stop(5%, #ff8f70), to(#ff3d54));
-  background: url(../images/bg-pattern-intro.svg) no-repeat 30% 51%, linear-gradient(90deg, #ff8f70 5%, #ff3d54 100%);
-  width: 100%;
-  height: 500px;
-  border-bottom-left-radius: 100px;
-  position: relative;
-  z-index: 2;
-}
-
-.hero__bg {
-  position: absolute;
-  top: 0;
-  left: 0%;
-  z-index: -1;
-}
-
-.hero__content {
-  height: 80%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #ffffff;
-}
-
-.hero__heading {
-  font-size: 4rem;
-  margin-bottom: 1.6rem;
-}
-
-.hero__secondary {
-  font-size: 1.2rem;
-  font-weight: 100;
-  letter-spacing: 1px;
-  margin-bottom: 3rem;
-}
-
-.hero__buttons button {
-  font-family: "Ubuntu", sans-serif;
-  background-color: #ffffff;
-  width: 10rem;
-  height: 4rem;
-  margin: 0 0.5rem;
+.dropbtn {
+  font-size: 1rem;
   border: none;
-  border-radius: 50px;
-  font-weight: 900;
+  outline: none;
+  color: #c8c8cb;
+  padding: 1rem 0;
+  background-color: inherit;
   cursor: pointer;
-  font-size: 1.1rem;
+  font-weight: 600;
 }
 
-.hero__buttons button:first-child {
-  color: #ff525d;
-}
-
-.hero__buttons button:first-child:hover {
-  background-color: #ff7a85;
-  color: #ffffff;
-  -webkit-transition: 0.25s background-color ease;
-  transition: 0.25s background-color ease;
-}
-
-.hero__buttons button:last-child {
-  color: #ffffff;
-  background: transparent;
-  border: 1px solid #ffffff;
-}
-
-.hero__buttons button:last-child:hover {
-  color: #ff525d;
-  background: #ffffff;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 160px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  padding: 1rem;
 }
 
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 8rem;
-  width: 100%;
-  max-width: 1440px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 10rem;
+  width: 100%;
   margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1440px;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__logo {
@@ -203,6 +160,10 @@ body {
   font-weight: 500;
 }
 
+.header__navigation__mobile__navigation {
+  display: none;
+}
+
 .header__user {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -244,6 +205,93 @@ body {
   background: #ff7a85;
 }
 
+.header__mobile__menu {
+  display: none;
+}
+
+.hero {
+  background: #ff8f70;
+  background: url(../images/bg-pattern-intro.svg) no-repeat 30% 51%, -webkit-gradient(linear, left top, right top, color-stop(5%, #ff8f70), to(#ff3d54));
+  background: url(../images/bg-pattern-intro.svg) no-repeat 30% 51%, linear-gradient(90deg, #ff8f70 5%, #ff3d54 100%);
+  width: 100%;
+  height: 800px;
+  border-bottom-left-radius: 100px;
+  position: relative;
+  overflow: hidden;
+}
+
+.hero__bg {
+  position: absolute;
+  top: 0;
+  left: 0%;
+  z-index: -1;
+}
+
+.hero__content {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ffffff;
+}
+
+.hero__heading {
+  font-size: 4rem;
+  margin-bottom: 1.6rem;
+  text-align: center;
+}
+
+.hero__secondary {
+  font-size: 1.2rem;
+  font-weight: 100;
+  letter-spacing: 1px;
+  margin-bottom: 4rem;
+  text-align: center;
+}
+
+.hero__buttons button {
+  font-family: "Ubuntu", sans-serif;
+  background-color: #ffffff;
+  width: 10rem;
+  height: 3.4rem;
+  margin: 0 0.5rem;
+  border: none;
+  border-radius: 50px;
+  font-weight: 900;
+  cursor: pointer;
+  font-size: 1.1rem;
+}
+
+.hero__buttons button:first-child {
+  color: #ff525d;
+}
+
+.hero__buttons button:first-child:hover {
+  background-color: #ff7a85;
+  color: #ffffff;
+}
+
+.hero__buttons button:last-child {
+  color: #ffffff;
+  background: transparent;
+  border: 1px solid #ffffff;
+}
+
+.hero__buttons button:last-child:hover {
+  color: #ff525d;
+  background: #ffffff;
+}
+
 .intro {
   width: 100%;
   height: 120vh;
@@ -262,7 +310,7 @@ body {
 
 .intro__content {
   width: 50%;
-  padding: 10rem 6.2rem;
+  padding: 12vh 7vw;
 }
 
 .state {
@@ -284,18 +332,20 @@ body {
   position: absolute;
   top: 5rem;
   left: 0;
-  background: url(../images/bg-pattern-circles.svg) no-repeat left bottom, #3f4164;
-  background-size: 50%;
+  background: url(../images/bg-pattern-circles.svg) no-repeat -55% 90%, #2c2d3f;
+  background-size: 70%;
   z-index: -1;
   border-top-right-radius: 100px;
   border-bottom-left-radius: 100px;
+  overflow: hidden;
 }
 
 .state__text {
-  width: 50%;
-  float: right;
+  width: 70%;
   color: #ffffff;
-  padding: 7rem 20rem 7rem 0rem;
+  padding: 7rem 15rem 7rem 0rem;
+  position: relative;
+  left: 48%;
 }
 
 .state__text__title {
@@ -305,6 +355,7 @@ body {
 
 .state__text__description {
   line-height: 2;
+  max-width: 700px;
 }
 
 .feature {
@@ -316,7 +367,7 @@ body {
 .feature__content {
   width: 50%;
   float: right;
-  padding: 14rem 15rem 7rem 0rem;
+  padding: 20vh 10vw 10vh 0;
 }
 
 .footer {
@@ -371,5 +422,148 @@ body {
   color: #ffffff;
   font-size: 1.2rem;
   margin-top: 1rem;
+}
+
+@media (max-width: 1030px) {
+  .header__logo {
+    margin-left: 2rem;
+  }
+  .header__navigation, .header__user {
+    display: none;
+  }
+  .header__mobile__menu {
+    position: absolute;
+    display: block;
+    top: 4rem;
+    right: 3vw;
+    width: 40px;
+    height: auto;
+    z-index: 99;
+  }
+  .header__mobile__navigation {
+    display: none;
+  }
+  .header__mobile__navigation.active {
+    background: white;
+    padding: 2rem;
+    border-radius: 5px;
+    min-height: 50vh;
+    width: 80%;
+    z-index: 99;
+    position: absolute;
+    top: 7rem;
+    right: 6vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-transition: 0.2s ease all;
+    transition: 0.2s ease all;
+  }
+  .header__mobile__navigation__dropbtn {
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    color: #4b5862;
+    padding: 1rem 0;
+    background-color: inherit;
+    cursor: pointer;
+    font-weight: 600;
+  }
+  .header__mobile__navigation__dropdown {
+    width: 100%;
+    text-align: center;
+  }
+  .header__mobile__navigation__dropdown:hover .header__mobile__navigation__dropbtn {
+    color: #c8c8cb;
+  }
+  .header__mobile__navigation__dropdown:hover .header__mobile__navigation__dropdown-arrow {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  .header__mobile__navigation__dropdown:hover .header__mobile__navigation__dropdown-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .header__mobile__navigation__dropdown-content {
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #eee;
+    width: 100%;
+  }
+  .header__mobile__navigation__link {
+    color: #4b5862;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    font-weight: 500;
+    font-family: "Ubuntu", sans-serif;
+  }
+  .header__mobile__user {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: auto;
+    border-top: 1px solid #eee;
+  }
+  .header__mobile__user__login, .header__mobile__user__signup {
+    color: #4b5862;
+    padding: 0.8rem 2.2rem;
+    border-radius: 50px;
+    margin: 0.5rem;
+    cursor: pointer;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    text-align: center;
+  }
+  .header__mobile__user__login:active {
+    color: #c8c8cb;
+  }
+  .header__mobile__user__signup {
+    background: #ff525d;
+    color: #ffffff;
+  }
+  .header__mobile__user__signup:active {
+    background: #ff7a85;
+  }
+  .header .intro {
+    padding: 10vh 0;
+  }
+  .header .hero__heading {
+    font-size: 3rem;
+  }
+  .header .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+    width: 100%;
+  }
+  .header .footer__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 /*# sourceMappingURL=style.css.map */
