--- a/homepage/website02/styles/style.scss
+++ b/homepage/website02/styles/style.scss
@@ -46,7 +46,7 @@ $line-height: 2;
 body {
   box-sizing: border-box;
   font-family: "Overpass", sans-serif;
-  background-color: $color-white;
+  background-color: #eee;
 }
 
 // utils
@@ -63,92 +63,50 @@ body {
   &__description {
     font-size: 1.1rem;
     line-height: $line-height;
+    max-width: 600px;
   }
 }
 
-// hero section
-.hero {
-  background: rgb(255, 143, 112);
-  background: url(../images/bg-pattern-intro.svg) no-repeat 30% 51%,
-    linear-gradient(90deg, rgba(255, 143, 112, 1) 5%, rgba(255, 61, 84, 1) 100%);
-  width: 100%;
-  height: 500px;
-  border-bottom-left-radius: 100px;
-  position: relative;
-  z-index: 2;
-
-  &__bg {
-    position: absolute;
-    top: 0;
-    left: 0%;
-    z-index: -1;
-  }
-
-  &__content {
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: $color-white;
-  }
-
-  &__heading {
-    font-size: 4rem;
-    margin-bottom: 1.6rem;
-  }
-
-  &__secondary {
-    font-size: 1.2rem;
-    font-weight: 100;
-    letter-spacing: 1px;
-    margin-bottom: 3rem;
-  }
-
-  &__buttons {
-    button {
-      font-family: "Ubuntu", sans-serif;
-      background-color: $color-white;
-      width: 10rem;
-      height: 4rem;
-      margin: 0 0.5rem;
-      border: none;
-      border-radius: 50px;
-      font-weight: 900;
-      cursor: pointer;
-      font-size: 1.1rem;
-    }
-
-    button:first-child {
-      color: $color-red;
-
-      &:hover {
-        background-color: $color-light-red;
-        color: $color-white;
-        transition: 0.25s background-color ease;
-      }
-    }
-
-    button:last-child {
-      color: $color-white;
-      background: transparent;
-      border: 1px solid $color-white;
-
-      &:hover {
-        color: $color-red;
-        background: $color-white;
-      }
-    }
-  }
+.dropbtn {
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  color: $color-gray;
+  padding: 1rem 0;
+  background-color: inherit;
+  cursor: pointer;
+  font-weight: 600;
 }
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: $color-white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  padding: 1rem;
+}
+
+// HEADER
 .header {
   display: flex;
-  height: 8rem;
-  width: 100%;
-  max-width: 1440px;
   align-items: center;
+  justify-content: center;
+  height: 10rem;
+  width: 100%;
   margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+
+  &__container {
+    display: flex;
+    max-width: 1440px;
+    width: 100%;
+    justify-content: space-between;
+  }
 
   &__logo {
     margin-left: 5rem;
@@ -216,6 +174,10 @@ body {
         font-weight: 500;
       }
     }
+
+    &__mobile__navigation {
+      display: none;
+    }
   }
 
   &__user {
@@ -251,6 +213,87 @@ body {
       }
     }
   }
+
+  &__mobile__menu {
+    display: none;
+  }
+}
+
+// hero section
+.hero {
+  background: rgb(255, 143, 112);
+  background: url(../images/bg-pattern-intro.svg) no-repeat 30% 51%,
+    linear-gradient(90deg, rgba(255, 143, 112, 1) 5%, rgba(255, 61, 84, 1) 100%);
+  width: 100%;
+  height: 800px;
+  border-bottom-left-radius: 100px;
+  position: relative;
+  overflow: hidden;
+
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0%;
+    z-index: -1;
+  }
+
+  &__content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: $color-white;
+  }
+
+  &__heading {
+    font-size: 4rem;
+    margin-bottom: 1.6rem;
+    text-align: center;
+  }
+
+  &__secondary {
+    font-size: 1.2rem;
+    font-weight: 100;
+    letter-spacing: 1px;
+    margin-bottom: 4rem;
+    text-align: center;
+  }
+
+  &__buttons {
+    button {
+      font-family: "Ubuntu", sans-serif;
+      background-color: $color-white;
+      width: 10rem;
+      height: 3.4rem;
+      margin: 0 0.5rem;
+      border: none;
+      border-radius: 50px;
+      font-weight: 900;
+      cursor: pointer;
+      font-size: 1.1rem;
+    }
+
+    button:first-child {
+      color: $color-red;
+
+      &:hover {
+        background-color: $color-light-red;
+        color: $color-white;
+      }
+    }
+
+    button:last-child {
+      color: $color-white;
+      background: transparent;
+      border: 1px solid $color-white;
+
+      &:hover {
+        color: $color-red;
+        background: $color-white;
+      }
+    }
+  }
 }
 
 // Introduction section
@@ -271,7 +314,7 @@ body {
 
   &__content {
     width: 50%;
-    padding: 10rem 6.2rem;
+    padding: 12vh 7vw;
   }
 }
 
@@ -289,19 +332,21 @@ body {
     position: absolute;
     top: 5rem;
     left: 0;
-    background: url(../images/bg-pattern-circles.svg) no-repeat left bottom,
-      hsl(237, 23%, 32%);
-    background-size: 50%;
+    background: url(../images/bg-pattern-circles.svg) no-repeat -55% 90%,
+      hsl(237, 17%, 21%);
+    background-size: 70%;
     z-index: -1;
     border-top-right-radius: 100px;
     border-bottom-left-radius: 100px;
+    overflow: hidden;
   }
 
   &__text {
-    width: 50%;
-    float: right;
+    width: 70%;
     color: $color-white;
-    padding: 7rem 20rem 7rem 0rem;
+    padding: 7rem 15rem 7rem 0rem;
+    position: relative;
+    left: 48%;
 
     &__title {
       font-size: 2.5rem;
@@ -310,6 +355,7 @@ body {
 
     &__description {
       line-height: $line-height;
+      max-width: 700px;
     }
   }
 }
@@ -322,7 +368,7 @@ body {
   &__content {
     width: 50%;
     float: right;
-    padding: 14rem 15rem 7rem 0rem;
+    padding: 20vh 10vw 10vh 0;
   }
 }
 
@@ -368,5 +414,156 @@ body {
     color: $color-white;
     font-size: 1.2rem;
     margin-top: 1rem;
+  }
+}
+
+@media (max-width: 1030px) {
+  .header {
+    &__logo {
+      margin-left: 2rem;
+    }
+
+    &__navigation,
+    &__user {
+      display: none;
+    }
+
+    &__mobile {
+      &__menu {
+        position: absolute;
+        display: block;
+        top: 4rem;
+        right: 3vw;
+        width: 40px;
+        height: auto;
+        z-index: 99;
+      }
+
+      &__navigation {
+        display: none;
+      }
+
+      &__navigation.active {
+        background: rgba($color-white, 1);
+        padding: 2rem;
+        border-radius: 5px;
+        min-height: 50vh;
+        width: 80%;
+        z-index: 99;
+        position: absolute;
+        top: 7rem;
+        right: 6vw;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: column;
+        transition: 0.2s ease all;
+
+      }
+
+      &__navigation {
+
+
+        &__dropbtn {
+          font-size: 1rem;
+          border: none;
+          outline: none;
+          color: hsl(207, 13%, 34%);
+          padding: 1rem 0;
+          background-color: inherit;
+          cursor: pointer;
+          font-weight: 600;
+        }
+
+        &__dropdown {
+          width: 100%;
+          text-align: center;
+        }
+
+        &__dropdown:hover &__dropbtn {
+          color: $color-gray;
+        }
+
+        &__dropdown:hover &__dropdown-arrow {
+          transform: rotate(180deg);
+        }
+
+        &__dropdown:hover &__dropdown-content {
+          display: flex;
+        }
+
+        &__dropdown-content {
+          display: none;
+          flex-direction: column;
+          background-color: #eee;
+          width: 100%;
+        }
+
+        &__link {
+          color: hsl(207, 13%, 34%);
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+          text-align: center;
+          font-weight: 500;
+          font-family: "Ubuntu", sans-serif;
+        }
+      }
+
+      &__user {
+        display: flex;
+        flex-direction: column;
+        margin-top: auto;
+        border-top: 1px solid #eee;
+
+        &__login,
+        &__signup {
+          color: hsl(207, 13%, 34%);
+          padding: 0.8rem 2.2rem;
+          border-radius: 50px;
+          margin: 0.5rem;
+          cursor: pointer;
+          font-family: "Ubuntu", sans-serif;
+          font-weight: 700;
+          text-decoration: none;
+          text-align: center;
+        }
+
+        &__login {
+          &:active {
+            color: $color-gray;
+          }
+        }
+
+        &__signup {
+          background: $color-red;
+          color: $color-white;
+
+          &:active {
+            background: $color-light-red;
+          }
+        }
+      }
+    }
+
+    .intro {
+      padding: 10vh 0;
+    }
+
+    .hero {
+      &__heading {
+        font-size: 3rem;
+      }
+    }
+
+    .footer {
+      flex-direction: column;
+      height: auto;
+      width: 100%;
+
+      &__list {
+        flex-direction: column;
+      }
+    }
   }
 }
