--- a/homepage/website02/styles/style.css
+++ b/homepage/website02/styles/style.css
@@ -28,6 +28,8 @@ body {
   font-size: 1.1rem;
   line-height: 2;
   max-width: 600px;
+  font-weight: 400;
+  color: #4b5862;
 }
 
 .dropbtn {
@@ -294,12 +296,12 @@ body {
 
 .intro {
   width: 100%;
-  height: 120vh;
+  min-height: 1000px;
   padding: 10rem 5rem;
   background-image: url(../images/illustration-editor-desktop.svg);
-  background-position: 140% 100%;
+  background-position: 140% 50%;
   background-repeat: no-repeat;
-  background-size: 60%;
+  background-size: 55%;
 }
 
 .intro__heading {
@@ -341,11 +343,10 @@ body {
 }
 
 .state__text {
-  width: 70%;
+  width: 90%;
   color: #ffffff;
-  padding: 7rem 15rem 7rem 0rem;
+  padding: 7rem 0 7rem 50rem;
   position: relative;
-  left: 48%;
 }
 
 .state__text__title {
@@ -356,18 +357,19 @@ body {
 .state__text__description {
   line-height: 2;
   max-width: 700px;
+  margin: 0 auto;
 }
 
 .feature {
-  height: 1100px;
-  background: url(../images/illustration-laptop-desktop.svg) no-repeat -52% 0%;
-  background-size: 65%;
+  min-height: 1100px;
+  background: url(../images/illustration-laptop-desktop.svg) no-repeat -70% 0%;
+  background-size: 70%;
 }
 
 .feature__content {
   width: 50%;
   float: right;
-  padding: 20vh 10vw 10vh 0;
+  padding: 30vh 10vw 10vh 0;
 }
 
 .footer {
@@ -378,14 +380,6 @@ body {
   display: -ms-flexbox;
   display: flex;
   border-top-right-radius: 100px;
-}
-
-.footer__logo {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 200px;
-          flex: 0 0 200px;
-  background: url(../images/logo.svg) no-repeat;
-  background-size: 60%;
 }
 
 .footer__list {
@@ -404,7 +398,7 @@ body {
 }
 
 .footer__item ul {
-  margin-top: 2rem;
+  margin-top: 1.2rem;
   list-style: none;
 }
 
@@ -422,6 +416,28 @@ body {
   color: #ffffff;
   font-size: 1.2rem;
   margin-top: 1rem;
+}
+
+@media (max-width: 1440px) {
+  .intro {
+    background-size: 60%;
+  }
+  .intro__content {
+    padding: 12vh 0;
+  }
+  .state {
+    background: url(../images/illustration-phones.svg) no-repeat 15% 20%;
+  }
+  .state__text {
+    padding: 5rem 0 5rem 40rem;
+    width: 95%;
+  }
+  .state__text__title {
+    font-size: 2.2rem;
+  }
+  .state__bg {
+    height: 70%;
+  }
 }
 
 @media (max-width: 1030px) {
@@ -545,25 +561,92 @@ body {
   .header__mobile__user__signup:active {
     background: #ff7a85;
   }
-  .header .intro {
-    padding: 10vh 0;
+  .intro {
+    padding: 10vh 0 0 0;
+    height: auto;
+    background-image: url(../images/illustration-editor-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center 150px;
   }
-  .header .hero__heading {
+  .intro__heading {
+    font-size: 2.2rem;
+  }
+  .intro__content {
+    width: 100%;
+    padding: 400px 7vw 0 7vw;
+  }
+  .hero__heading {
     font-size: 3rem;
   }
-  .header .footer {
+  .footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: auto;
     width: 100%;
   }
-  .header .footer__list {
+  .footer__list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-left: 0;
+  }
+  .footer__item {
+    margin-bottom: 2rem;
+  }
+  .state {
+    padding: 10vh 7vw;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 800px;
+    background: url(../images/illustration-phones.svg) no-repeat center top;
+    background-size: 375px;
+  }
+  .state__bg {
+    top: 10rem;
+    height: 80%;
+    background: url(../images/bg-pattern-circles.svg) no-repeat center -21rem, #2c2d3f;
+    background-size: 200%;
+  }
+  .state__text {
+    width: 100%;
+    left: 0;
+    padding: 10vh 7vw;
+    text-align: center;
+    top: 30%;
+  }
+  .state__text__title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  .feature {
+    background: url(../images/illustration-laptop-mobile.svg) no-repeat center 5rem;
+  }
+  .feature__content {
+    width: 100%;
+    padding: 30rem 7vw 0 7vw;
+  }
+  .content {
+    text-align: center;
+    margin-bottom: 5rem;
+  }
+  .content__heading {
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+  }
+  .content__description {
+    font-size: 1rem;
+    margin: 0 auto;
   }
 }
 /*# sourceMappingURL=style.css.map */
