--- a/homepage/website02/styles/style.scss
+++ b/homepage/website02/styles/style.scss
@@ -64,6 +64,8 @@ body {
     font-size: 1.1rem;
     line-height: $line-height;
     max-width: 600px;
+    font-weight: 400;
+    color: hsl(207, 13%, 34%);
   }
 }
 
@@ -299,12 +301,12 @@ body {
 // Introduction section
 .intro {
   width: 100%;
-  height: 120vh;
+  min-height: 1000px;
   padding: 10rem 5rem;
   background-image: url(../images/illustration-editor-desktop.svg);
-  background-position: 140% 100%;
+  background-position: 140% 50%;
   background-repeat: no-repeat;
-  background-size: 60%;
+  background-size: 55%;
 
   &__heading {
     text-align: center;
@@ -332,8 +334,7 @@ body {
     position: absolute;
     top: 5rem;
     left: 0;
-    background: url(../images/bg-pattern-circles.svg) no-repeat -55% 90%,
-      hsl(237, 17%, 21%);
+    background: url(../images/bg-pattern-circles.svg) no-repeat -55% 90%, hsl(237, 17%, 21%);
     background-size: 70%;
     z-index: -1;
     border-top-right-radius: 100px;
@@ -342,11 +343,10 @@ body {
   }
 
   &__text {
-    width: 70%;
+    width: 90%;
     color: $color-white;
-    padding: 7rem 15rem 7rem 0rem;
+    padding: 7rem 0 7rem 50rem;
     position: relative;
-    left: 48%;
 
     &__title {
       font-size: 2.5rem;
@@ -356,19 +356,20 @@ body {
     &__description {
       line-height: $line-height;
       max-width: 700px;
+      margin: 0 auto;
     }
   }
 }
 
 .feature {
-  height: 1100px;
-  background: url(../images/illustration-laptop-desktop.svg) no-repeat -52% 0%;
-  background-size: 65%;
+  min-height: 1100px;
+  background: url(../images/illustration-laptop-desktop.svg) no-repeat -70% 0%;
+  background-size: 70%;
 
   &__content {
     width: 50%;
     float: right;
-    padding: 20vh 10vw 10vh 0;
+    padding: 30vh 10vw 10vh 0;
   }
 }
 
@@ -378,12 +379,6 @@ body {
   height: 400px;
   display: flex;
   border-top-right-radius: 100px;
-
-  &__logo {
-    flex: 0 0 200px;
-    background: url(../images/logo.svg) no-repeat;
-    background-size: 60%;
-  }
 
   &__list {
     flex: 1;
@@ -395,7 +390,7 @@ body {
 
   &__item {
     ul {
-      margin-top: 2rem;
+      margin-top: 1.2rem;
       list-style: none;
     }
 
@@ -414,6 +409,34 @@ body {
     color: $color-white;
     font-size: 1.2rem;
     margin-top: 1rem;
+  }
+}
+
+@media (max-width: 1440px) {
+  .intro {
+    background-size: 60%;
+
+    &__content {
+      padding: 12vh 0;
+    }
+  }
+
+  .state {
+    background:url(../images/illustration-phones.svg) no-repeat 15% 20%;
+
+    &__text {
+      padding: 5rem 0 5rem 40rem;
+      width:95%;
+
+      &__title {
+        font-size:2.2rem;
+      }
+    }
+
+    &__bg {
+      height:70%;
+  
+    }
   }
 }
 
@@ -458,12 +481,9 @@ body {
         align-items: center;
         flex-direction: column;
         transition: 0.2s ease all;
-
       }
 
       &__navigation {
-
-
         &__dropbtn {
           font-size: 1rem;
           border: none;
@@ -545,25 +565,98 @@ body {
         }
       }
     }
+  }
 
-    .intro {
-      padding: 10vh 0;
+  .intro {
+    padding: 10vh 0 0 0;
+    height: auto;
+    background-image: url(../images/illustration-editor-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center 150px;
+
+    &__heading {
+      font-size: 2.2rem;
     }
 
-    .hero {
-      &__heading {
-        font-size: 3rem;
-      }
-    }
-
-    .footer {
-      flex-direction: column;
-      height: auto;
+    &__content {
       width: 100%;
+      padding: 400px 7vw 0 7vw;
+    }
+  }
 
-      &__list {
-        flex-direction: column;
+  .hero {
+    &__heading {
+      font-size: 3rem;
+    }
+  }
+
+  .footer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: 100%;
+
+    &__list {
+      flex-direction: column;
+      margin-left: 0;
+    }
+
+    &__item {
+      margin-bottom: 2rem;
+    }
+  }
+
+  .state {
+    padding: 10vh 7vw;
+    justify-content: center;
+    height: 800px;
+    background: url(../images/illustration-phones.svg) no-repeat center top;
+    background-size: 375px;
+
+    &__bg {
+      top: 10rem;
+      height: 80%;
+      background: url(../images/bg-pattern-circles.svg) no-repeat center -21rem, #2c2d3f;
+      background-size: 200%;
+    }
+
+    &__text {
+      width: 100%;
+      left: 0;
+      padding: 10vh 7vw;
+      text-align: center;
+      top: 30%;
+
+      &__title {
+        font-size: 2rem;
+        margin-bottom:1rem;
       }
+    }
+  }
+
+  .feature {
+    background: url(../images/illustration-laptop-mobile.svg) no-repeat center 5rem;
+
+    &__content {
+      width: 100%;
+      padding: 30rem 7vw 0 7vw;
+    }
+  }
+
+  .content {
+    text-align: center;
+    margin-bottom: 5rem;
+
+    &__heading {
+      font-size: 1.6rem;
+      margin-bottom: 1rem;
+    }
+
+    &__description {
+      font-size: 1rem;
+      margin: 0 auto;
     }
   }
 }
