--- a/homepage/website03/assets/default.css
+++ b/homepage/website03/assets/default.css
@@ -6,12 +6,14 @@
   --youtube: hsl(348, 97%, 39%);
   --lime-green: hsl(163, 72%, 41%);
   --bright-red: hsl(356, 69%, 56%);
-  --mainText: hsl(228, 34%, 66%);
-  --subText: hsl(228, 12%, 44%);
-  --card-bg: hsl(228, 28%, 20%);
-  --body-bg: hsl(230, 17%, 14%);
-  --top-bg: hsl(232, 19%, 15%);
-  --heading: #ffffff;
+
+  --mainText: hsl(228, 12%, 44%);
+  --subText: hsl(230, 17%, 14%);
+  --card-bg: hsl(227, 47%, 96%);
+  --body-bg: hsl(0, 0%, 100%);
+  --top-bg: hsl(225, 100%, 98%);
+
+  --heading: #000000;
 }
 
 .increase {
@@ -28,10 +30,6 @@
 
 .card-title span {
   color: var(--subText);
-}
-
-.heading {
-  color: var(--heading);
 }
 
 body {
@@ -118,9 +116,9 @@ body {
   cursor: pointer;
   font-size: 22px;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .toggle-control input {
@@ -147,7 +145,13 @@ body {
   height: 28px;
   width: 50px;
   border-radius: 14px;
-  background-image: -webkit-gradient(linear, left top, right top, from(#378fe6), to(#3eda82));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#378fe6),
+    to(#3eda82)
+  );
   background-image: linear-gradient(90deg, #378fe6, #3eda82);
   -webkit-transition: background-image 0.15s ease-in;
   transition: background-image 0.15s ease-in;
@@ -171,4 +175,3 @@ body {
     width: auto !important;
   }
 }
-/*# sourceMappingURL=main.css.map */
