--- a/homepage/website03/assets/main.scss
+++ b/homepage/website03/assets/main.scss
@@ -5,16 +5,37 @@
   --twitter: hsl(203, 89%, 53%);
   --instagram: linear-gradient(90deg, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
   --youtube: hsl(348, 97%, 39%);
-
-  --dk-desaturated-blue: hsl(228, 34%, 66%);
-
   --lime-green: hsl(163, 72%, 41%);
   --bright-red: hsl(356, 69%, 56%);
 
-  --text-dark-gray: hsl(228, 12%, 44%);
-
+  --mainText: hsl(228, 34%, 66%);
+  --subText: hsl(228, 12%, 44%);
+  --card-bg: hsl(228, 28%, 20%);
   --body-bg: hsl(230, 17%, 14%);
   --top-bg: hsl(232, 19%, 15%);
+
+  --heading: #ffffff;
+}
+
+// color class
+.increase {
+  color: var(--lime-green);
+}
+
+.decrease {
+  color: var(--bright-red);
+}
+
+.main-text {
+  color: var(--mainText);
+}
+
+.card-title span {
+  color: var(--subText);
+}
+
+.heading {
+  color: var(--heading);
 }
 
 body {
@@ -35,10 +56,14 @@ body {
   height: 100px;
 }
 
+.header-theme {
+  height: 30px;
+}
+
 .main .card,
 .overview .card {
-  background-color: hsl(228, 28%, 20%);
-  color: #fff;
+  background-color: var(--card-bg);
+  color: var(--heading);
   position: relative;
 }
 
@@ -68,20 +93,18 @@ body {
   background: var(--youtube);
 }
 
-.card-title span {
-  color: var(--text-dark-gray);
-}
+.card-body {
+  .number {
+    font-size: 70px;
+  }
 
-.card-body .number {
-  font-size: 70px;
-}
-
-.card-body .followers {
-  font-size: 1.1rem;
-  margin-top: -10px;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  color: var(--dk-desaturated-blue);
+  .followers {
+    font-size: 1.1rem;
+    margin-top: -10px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: var(--mainText);
+  }
 }
 
 .brand-icon {
@@ -92,33 +115,19 @@ body {
   height: 150px;
 }
 
-.increase {
-  color: var(--lime-green);
-}
-
-.decrease {
-  color: var(--bright-red);
-}
-
-.desaturated-blue {
-  color: var(--dk-desaturated-blue);
-}
-
-
-
-
-/* checkbox */
-
+/* checkbox - theme control */
 
 // Tweak these to change the style of the toggle
-$toggle-background-color-on: linear-gradient(90deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
-$toggle-background-color-off: hsl(230, 22%, 74%);
-$toggle-control-color: white;
-$toggle-width: 68px;
+$toggle-background-color-on: hsl(230, 22%, 74%);
+$toggle-background-color-off: linear-gradient(90deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+
+$toggle-control-on-color: white;
+$toggle-control-off-color: var(--body-bg);
+$toggle-width: 50px;
 $toggle-height: 28px;
 $toggle-gutter: 5px;
 $toggle-radius: 50%;
-$toggle-control-speed: .15s;
+$toggle-control-speed: 0.15s;
 $toggle-control-ease: ease-in;
 
 // These are our computed variables
@@ -145,9 +154,10 @@ $toggle-control-size: $toggle-height - ($toggle-gutter * 2);
 
   input:checked ~ .control {
     background: $toggle-background-color-on;
-    
+
     &:after {
       left: $toggle-width - $toggle-control-size - $toggle-gutter;
+      background: $toggle-control-on-color;
     }
   }
 
@@ -158,8 +168,8 @@ $toggle-control-size: $toggle-height - ($toggle-gutter * 2);
     height: $toggle-height;
     width: $toggle-width;
     border-radius: $toggle-radius;
-    background-color: $toggle-background-color-off;
-    transition: background-color $toggle-control-speed $toggle-control-ease;
+    background-image: $toggle-background-color-off;
+    transition: background-image $toggle-control-speed $toggle-control-ease;
 
     &:after {
       content: "";
@@ -169,18 +179,14 @@ $toggle-control-size: $toggle-height - ($toggle-gutter * 2);
       width: $toggle-control-size;
       height: $toggle-control-size;
       border-radius: $toggle-radius;
-      background: $toggle-control-color;
+      background: $toggle-control-off-color;
       transition: left $toggle-control-speed $toggle-control-ease;
     }
   }
 }
 
-/* Center the control */
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: #222229;
-  color: white;
+@media (min-width: 768px) {
+  .header-theme {
+    width: auto !important;
+  }
 }
